# mocktests

./: .gitignore  PROJECT_CONFIG.md  README.md  apikeys4  gemini-flask-57-2.py  pyproject.toml  setup.sh  test_repository.py
__MACOSX/CodePori/: ._main(no-gemini-proxy).py  ._main(unicode-issuse).py  ._main(works w errors).py  ._main3.py  ._project_description.txt
__MACOSX/CodePori/output/code/src/stages/: ._generate.py
__MACOSX/CodePori/output/code/tests/: ._conftest.py
