[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "mocktests"
version = "0.1.0"
description = "CodePori AI-powered code generation system with multi-agent architecture"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
    { name = "CodePori Team", email = "zeeshan.rasheed@tuni.fi" },
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11", 
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Code Generators",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "requests>=2.31.0",
    "pytest>=8.0.0",
]

[project.scripts]
codepori = "gemini-flask-57-2:main"

[project.urls]
Homepage = "https://github.com/perlman-izzy/mocktests"
Repository = "https://github.com/perlman-izzy/mocktests.git"
Issues = "https://github.com/perlman-izzy/mocktests/issues"

[tool.pytest.ini_options]
testpaths = ["test_repository.py"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--disable-warnings",
    "-v",
]